--- a/backend/package.json
+++ b/backend/package.json
@@ -4,23 +4,24 @@
       "main": "server.js",
       "type": "module",
       "scripts": {
-        "start": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+            "start": "nodemon server.js",
+            "test": "echo \"Error: no test specified\" && exit 1"
       },
       "keywords": [],
       "author": "",
       "license": "ISC",
       "description": "",
       "dependencies": {
-        "bcryptjs": "^3.0.0",
-        "body-parser": "^1.20.3",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.7",
-        "express": "^4.21.2",
-        "jsonwebtoken": "^9.0.2",
-        "multer": "^1.4.5-lts.1",
-        "snowflake-sdk": "^2.0.2",
-        "uuid": "^11.0.5",
-        "zod": "^3.24.2"
+            "bcryptjs": "^3.0.0",
+            "body-parser": "^1.20.3",
+            "cors": "^2.8.5",
+            "dotenv": "^16.4.7",
+            "express": "^4.21.2",
+            "jsonwebtoken": "^9.0.2",
+            "multer": "^1.4.5-lts.1",
+            "path": "^0.12.7",
+            "snowflake-sdk": "^2.0.2",
+            "uuid": "^11.0.5",
+            "zod": "^3.24.2"
       }
-    }
+}
